--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <HEAD><TITLE> </title> 
 </HEAD>
 <Body  bgcolor="YELLOW" FORM>
-<H1 ALIGN="CENTER">RESGISTER FORM </H1>
+<H1 ALIGN="CENTER"> FORM </H1>
 <form>
    <label for="fname">First name: </label><br>
    <input type="text" id="fname" name="fname" "value" PLACEHOLDER="FIRSTNAME"><br>
